# flightinfo

./: Cargo.toml  readme.md
src/: main.rs
src/model/: flight.rs  home_page.rs  mod.rs
src/repository/: redis_storage.rs
src/services/: flight_service.rs  mod.rs
src/usecases/ports/: flight_storage.rs
templates/: home.stpl
