[package]
name = "airportinfo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.9.0"
actix-web = "4.4.0"
env_logger = "0.10.0"
serde = { version = "1.0.188", features = ["derive"] }
chrono = { version = "0.4.31", features = ["serde"]}
sailfish = "0.8.0"
log = "0.4"